[tool.poetry]
name = "outlier-detection"
version = "0.1.0"
description = ""
authors = ["lstmemery <matthew.emery44@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
jupyter = "^1.0.0"
scipy = "^1.7.3"
scikit-learn = "^1.0.2"
shap = "^0.40.0"
matplotlib = "^3.5.1"
yellowbrick = "^1.3.post1"
nbconvert = "^6.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
